--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
          <p>See exactly where your money goes each month. Receive notifications when you’re 
           close to hitting your limits.</p>
       </div>
-      <div class="col-md-3 text-center third-container">br><br>
+      <div class="col-md-3 text-center third-container"><br><br>
         <img src="images/icon-onboarding.svg"><br><br>
        <h4><strong>Fast Onboarding</strong></h4><br>
          <p>We don’t do branches. Open your account in minutes online and start taking control 
           of your finances right away.</p>
       </div>
-      <div class="col-md-3 text-center third-container">br><br>
+      <div class="col-md-3 text-center third-container"><br><br>
         <img src="images/icon-api.svg"><br><br>
        <h4><strong>Open API</strong></h4><br>
          <p>Manage your savings, investments, pension, and much more from one account. Tracking 
