--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </div>
     <div class="col-md-6 footer-Attribute text-center">
       <button class="myBtn">Request Invite</button><br>
-      <p>©Easybank. All Rights Reserved</p>
+      <small>©Easybank. All Rights Reserved</small>
         <small><a href="https://egbetayo.netlify.app">Coded by Hezhykeyhel</a></small>
       </div>
     </div>
