--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
       <div class="row first-content">
      <div class="col-md-6 first-container text-center">
-       <h1><strong>Next generation <br>digital banking</strong></h1>
+       <h1><strong>Next generation <br>digital banking</strong></h1><br>
        <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
         for spending, saving, budgeting, investing, and much more.</p><br>
         <button class="myBtn">Request Invite</button>
