--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Easybank landing page</title>
+  <title>Easybank Landing Page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
