--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
        </div>
        </div>
        <div class="row cyaner">
-       <div class="col-md-3 text-center third-container">
+       <div class="col-md-3 text-center third-container"><br><br>
          <img src="images/icon-online.svg"><br><br>
         <h4><strong>Online Banking</strong></h4><br>
           <p>Our modern web and mobile applications allow you to keep track of your finances 
@@ -139,7 +139,10 @@
     <div class="col-md-2 text-center">
       <img src="images/logo2.svg">
         <span class="footer-img">
-          
+          <i class="fas fa-facebook"></i>
+          <i class="fas fa-twitter"></i>
+          <i class="fas fa-instagram"></i>
+          <i class="fas fa-youtube"></i>
         </span>
     </div>
     <div class="col-md-2 text-center">
