--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
      </div>
    <div class="row footer">
     <div class="col-md-2 text-center">
-      <img src="images/logo2.svg">
+      <img src="images/logo2.svg"><br>
         <span class="footer-img">
-          <i class="fas fa-facebook"></i>
-          <i class="fas fa-twitter"></i>
-          <i class="fas fa-instagram"></i>
-          <i class="fas fa-youtube"></i>
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-youtube"></i>
         </span>
     </div>
     <div class="col-md-2 text-center">
