--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
           <i class="fab fa-twitter"></i>
           <i class="fab fa-instagram"></i>
           <i class="fab fa-youtube"></i>
+          <i class="fab fa-linkedin"></i>
         </span>
     </div>
     <div class="col-md-2 text-center">
