--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
    <div class="row footer">
     <div class="col-md-2 text-center">
       <img src="images/logo2.svg"><br>
-        <span class="footer-img">
+        <span class="footer-img text-center">
           <i class="fab fa-facebook"></i>
           <i class="fab fa-twitter"></i>
           <i class="fab fa-instagram"></i>
